--- a/package.json
+++ b/package.json
@@ -13,16 +13,22 @@
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "7.37.0",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.0",
     "zod": "3.19.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.186",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
+    "@types/react-router-dom": "^5.3.3",
+    "miragejs": "^0.1.45",
     "typescript": "4.4.2"
   },
   "scripts": {
