add: Form Component Abstraction with Compound Components

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mantine/core": "^5.5.5",
     "@mantine/hooks": "^5.5.5",
     "@mantine/styles": "^5.5.5",
+    "@tanstack/react-location": "^3.7.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -17,8 +18,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "7.37.0",
-    "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.0",
     "zod": "3.19.1"
@@ -26,8 +25,6 @@
   "devDependencies": {
     "@types/lodash": "^4.14.186",
     "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.4",
-    "@types/react-router-dom": "^5.3.3",
     "miragejs": "^0.1.45",
     "typescript": "4.4.2"
   },
