--- a/package.json
+++ b/package.json
@@ -1,55 +1,52 @@
 {
-    "name": "test-react-hook-form",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "@emotion/react": "^11.10.4",
-        "@hookform/resolvers": "2.9.8",
-        "@mantine/core": "^5.5.5",
-        "@mantine/hooks": "^5.5.5",
-        "@mantine/styles": "^5.5.5",
-        "@tanstack/react-location": "^3.7.4",
-        "@testing-library/jest-dom": "^5.14.1",
-        "@testing-library/react": "^13.0.0",
-        "@testing-library/user-event": "^13.2.1",
-        "@types/jest": "^27.0.1",
-        "@types/node": "^16.7.13",
-        "lodash": "^4.17.21",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-hook-form": "7.37.0",
-        "react-scripts": "5.0.1",
-        "web-vitals": "^2.1.0",
-        "zod": "3.19.1"
-    },
-    "devDependencies": {
-        "@types/lodash": "^4.14.186",
-        "@types/react": "^18.0.9",
-        "miragejs": "^0.1.45",
-        "typescript": "^4.5.5"
-    },
-    "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject"
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    }
+  "name": "test-react-hook-form",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "watch": "webpack serve --config webpack.config.js"
+  },
+  "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@hookform/resolvers": "2.9.8",
+    "@mantine/core": "^5.5.5",
+    "@mantine/hooks": "^5.5.5",
+    "@mantine/styles": "^5.5.5",
+    "@tanstack/react-location": "^3.7.4",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^13.0.0",
+    "@testing-library/user-event": "^13.2.1",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.7.13",
+    "lodash": "^4.17.21",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "7.37.0",
+    "zod": "3.19.1"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.186",
+    "@types/react": "^18.0.9",
+    "miragejs": "^0.1.45",
+    "typescript": "^4.5.5",
+    "babel-loader": "^8.2.3",
+    "@babel/core": "^7.17.5",
+    "@babel/plugin-transform-runtime": "^7.17.0",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
+    "@babel/runtime": "^7.17.2",
+    "ts-loader": "^9.2.6",
+    "style-loader": "^3.3.1",
+    "css-loader": "^6.6.0",
+    "html-webpack-plugin": "^5.5.0",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  }
 }
