--- a/package.json
+++ b/package.json
@@ -24,21 +24,23 @@
     "zod": "3.19.1"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.186",
-    "@types/react": "^18.0.9",
-    "miragejs": "^0.1.45",
-    "typescript": "^4.5.5",
-    "babel-loader": "^8.2.3",
     "@babel/core": "^7.17.5",
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
     "@babel/runtime": "^7.17.2",
-    "ts-loader": "^9.2.6",
-    "style-loader": "^3.3.1",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.8",
+    "@types/lodash": "^4.14.186",
+    "@types/react": "^18.0.9",
+    "babel-loader": "^8.2.3",
     "css-loader": "^6.6.0",
     "html-webpack-plugin": "^5.5.0",
+    "miragejs": "^0.1.45",
+    "react-refresh": "^0.14.0",
+    "style-loader": "^3.3.1",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.5.5",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1"
