--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "watch": "webpack serve --config webpack.config.js"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.4",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@hookform/resolvers": "2.9.8",
     "@mantine/core": "^5.5.5",
     "@mantine/hooks": "^5.5.5",
@@ -30,6 +31,7 @@
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
     "@babel/runtime": "^7.17.2",
+    "@emotion/babel-plugin": "^11.10.5",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.8",
     "@types/lodash": "^4.14.186",
     "@types/react": "^18.0.9",
