--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mantine/core": "^5.7.2",
     "@mantine/hooks": "^5.5.5",
     "@mantine/styles": "^5.5.5",
+    "@tabler/icons": "^1.111.0",
     "@tanstack/react-location": "^3.7.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
