--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "7.37.0",
+    "react-query": "^3.39.2",
     "zod": "3.19.1"
   },
   "devDependencies": {
