--- a/package.json
+++ b/package.json
@@ -47,10 +47,12 @@
     "gh-pages": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "mini-css-extract-plugin": "^2.6.1",
     "react-refresh": "^0.14.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.2.6",
+    "ts-node": "^10.9.1",
     "typescript": "^4.5.5",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
